# rally

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  PRINCIPLES.md  README.md  SECURITY.md  SUPPORT.md  package-lock.json  package.json  pyproject.toml  rally
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_request.yml  feature_request.yml
.github/workflows/: ci.yml  dependency-review.yml  pr.yml  publish.yml  scorecards.yml
docs/: ERROR_REFERENCE.md  FLOW_YAML_REFERENCE.md  LESSONS_RALLY_PORT_GAP_READ_2026-04-13.md  RALLY_AGENT_ALLOWED_SKILL_ENFORCEMENT.md  RALLY_AGENT_ALLOWED_SKILL_ENFORCEMENT_PLAN_2026-04-13.md  RALLY_AGENT_ALLOWED_SKILL_ENFORCEMENT_PLAN_2026-04-13_WORKLOG.md  RALLY_AGENT_INTERVIEW_AND_SESSION_FORKING_2026-04-14.md  RALLY_AGENT_INTERVIEW_AND_SESSION_FORKING_2026-04-14_WORKLOG.md  RALLY_AGENT_INTERVIEW_DEBUGGING_GUIDE.md  RALLY_BACKGROUND_EXECUTION.md  RALLY_BASE_AGENT_FINAL_OUTPUT_NOTE_PIVOT_2026-04-13.md  RALLY_BASE_AGENT_FINAL_OUTPUT_NOTE_PIVOT_2026-04-13_WORKLOG.md  RALLY_CLAUDE_CODE_ADAPTER_AUDIT_2026-04-13.md  RALLY_CLAUDE_CODE_FIRST_CLASS_ADAPTER_SUPPORT.md  RALLY_CLAUDE_CODE_FIRST_CLASS_ADAPTER_SUPPORT_2026-04-13.md  RALLY_CLAUDE_CODE_FIRST_CLASS_ADAPTER_SUPPORT_2026-04-13_WORKLOG.md  RALLY_CLI_AND_LOGGING.md  RALLY_CLI_AND_LOGGING_2026-04-13.md  RALLY_CODEX_RUNNER_MCP_SUPPORT_AND_AUTH.md  RALLY_CODEX_RUNNER_MCP_SUPPORT_AND_AUTH_2026-04-13.md  RALLY_CODEX_RUNNER_MCP_SUPPORT_AND_AUTH_2026-04-13_WORKLOG.md  RALLY_COMMUNICATION_MODEL.md  RALLY_CONTRACT_LAW_ACROSS_REPO_SURFACES_2026-04-13.md  RALLY_DEFAULT_AGENT_ISSUE_REPORTING_2026-04-14.md  RALLY_DEFAULT_AGENT_ISSUE_REPORTING_2026-04-14_WORKLOG.md  RALLY_DOCTRINE_AUTHORING_ELEGANCE_AUDIT_2026-04-16.md  RALLY_DOCTRINE_AUTHORING_ELEGANCE_AUDIT_2026-04-16_WORKLOG.md  RALLY_DOCTRINE_JSON_OUTPUT_PORT_2026-04-15.md  RALLY_DOCTRINE_JSON_OUTPUT_PORT_2026-04-15_WORKLOG.md  RALLY_EXTERNAL_PROJECT_INTEGRATION_MODEL.md  RALLY_EXTERNAL_PROJECT_INTEGRATION_MODEL_2026-04-13.md  RALLY_EXTERNAL_PROJECT_INTEGRATION_MODEL_2026-04-13_WORKLOG.md  RALLY_FIRST_CLASS_ROUTING_AND_PREVIOUS_TURN_PATTERNS_2026-04-16.md  RALLY_FIRST_CLASS_ROUTING_AND_PREVIOUS_TURN_PATTERNS_2026-04-16_WORKLOG.md  RALLY_HERMES_ADAPTER_AUDIT_2026-04-13.md  RALLY_HERMES_ADAPTER_RUNTIME_GENERALIZATION_2026-04-13.md  RALLY_INHERITABLE_FINAL_OUTPUT_FAMILIES_2026-04-15.md  RALLY_INHERITABLE_FINAL_OUTPUT_FAMILIES_2026-04-15_WORKLOG.md  RALLY_MASTER_DESIGN.md  RALLY_MASTER_DESIGN_2026-04-12.md  (+26 more)
flows/_stdlib_smoke/prompts/: AGENTS.prompt
flows/poem_loop/: flow.yaml
flows/poem_loop/examples/: poem_review.example.json
flows/poem_loop/prompts/: AGENTS.prompt
flows/poem_loop/schemas/: poem_review.schema.json
flows/single_repo_repair/: flow.yaml
flows/single_repo_repair/fixtures/tiny_issue_service/: README.md  pyproject.toml
flows/single_repo_repair/fixtures/tiny_issue_service/tests/: test_pagination.py
flows/single_repo_repair/fixtures/tiny_issue_service/tiny_issue_service/: __init__.py  pagination.py
flows/single_repo_repair/fixtures/tiny_issue_service/tiny_issue_service.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
flows/single_repo_repair/prompts/: AGENTS.prompt
flows/single_repo_repair/setup/: prepare_home.sh  prompt_inputs.py
flows/software_engineering_demo/: flow.yaml
flows/software_engineering_demo/examples/: critic_review.example.json
flows/software_engineering_demo/prompts/: AGENTS.prompt
flows/software_engineering_demo/schemas/: critic_review.schema.json
flows/software_engineering_demo/setup/: prepare_home.sh  prompt_inputs.py
mcps/fixture-repo/: server.toml
runs/: .gitignore
skills/demo-git/prompts/: SKILL.prompt
skills/pytest-local/: SKILL.md
skills/rally-kernel/: SKILL.md
skills/rally-kernel/prompts/: SKILL.prompt
skills/rally-learn/prompts/: SKILL.prompt
skills/rally-memory/prompts/: SKILL.prompt
skills/repo-search/: SKILL.md
src/rally/: __init__.py  __main__.py  _package_release.py  cli.py  errors.py  release_flow.py
src/rally/_bundled/: __init__.py
src/rally/_release_flow/: __init__.py  common.py  models.py  ops.py  parsing.py  tags.py
src/rally/adapters/: __init__.py  base.py  mcp_readiness.py  registry.py
src/rally/domain/: __init__.py  flow.py  interview.py  memory.py  rooted_path.py  run.py  turn_result.py
src/rally/memory/: __init__.py  events.py  index.py  logging.py  models.py  service.py  store.py
src/rally/services/: __init__.py  agent_skill_validation.py  atomic_io.py  builtin_assets.py  bundled_assets.py  detach.py  event_log.py  final_response_loader.py  flow_build.py  flow_env.py  flow_loader.py  framework_assets.py  guarded_git_repos.py  heartbeat.py  home_materializer.py  interview.py  issue_editor.py  issue_ledger.py  memory_index.py  memory_runtime.py  memory_store.py  previous_turn_inputs.py  process_identity.py  reconcile.py  run_events.py  run_status.py  run_stop.py  run_store.py  runner.py  (+4 more)
tests/: __init__.py
tests/integration/: test_packaged_install.py
tests/unit/: __init__.py  test_adapter_mcp_projection.py  test_adapter_registry.py  test_atomic_io.py  test_bundled_assets.py  test_claude_code_event_stream.py  test_claude_code_launcher.py  test_cli.py  test_codex_event_stream.py  test_detach.py  test_emit_skill.py  test_external_skills.py  test_final_response_loader.py  test_flow_build.py  test_flow_loader.py  test_flow_lock.py  test_framework_assets.py  test_heartbeat.py  test_home_materializer.py  test_interview.py  test_issue_editor.py  test_issue_ledger.py  test_launcher.py  test_memory_index.py  test_memory_runtime.py  test_memory_store.py  test_package_release.py  test_previous_turn_inputs.py  test_process_identity.py  test_reconcile.py  test_release_flow.py  test_result_contract.py  test_rooted_path.py  test_run_events.py  test_run_status.py  test_run_stop.py  test_run_store.py  test_run_watch.py  test_runner.py  test_runner_active_run_guidance.py  (+5 more)
tools/: sync_bundled_assets.py
tools/qmd_bridge/: main.mjs  package-lock.json  package.json
(+96 files in other folders)
