[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "rally"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "doctrine",
    "PyYAML>=6,<7",
    "rich>=14,<15",
]

[project.scripts]
rally = "rally.cli:main"

[tool.rally.workspace]
version = 1

[tool.doctrine.compile]
additional_prompt_roots = ["stdlib/rally/prompts"]

[tool.doctrine.emit]

[[tool.doctrine.emit.targets]]
name = "_stdlib_smoke"
entrypoint = "flows/_stdlib_smoke/prompts/AGENTS.prompt"
output_dir = "flows/_stdlib_smoke/build/agents"

[[tool.doctrine.emit.targets]]
name = "poem_loop"
entrypoint = "flows/poem_loop/prompts/AGENTS.prompt"
output_dir = "flows/poem_loop/build/agents"

[[tool.doctrine.emit.targets]]
name = "software_engineering_demo"
entrypoint = "flows/software_engineering_demo/prompts/AGENTS.prompt"
output_dir = "flows/software_engineering_demo/build/agents"

[[tool.doctrine.emit.targets]]
name = "rally-kernel"
entrypoint = "skills/rally-kernel/prompts/SKILL.prompt"
output_dir = "skills/rally-kernel/build"

[[tool.doctrine.emit.targets]]
name = "demo-git"
entrypoint = "skills/demo-git/prompts/SKILL.prompt"
output_dir = "skills/demo-git/build"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
doctrine = { path = "../doctrine", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
