[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "rally-agents"
version = "0.1.1"
description = "Program complex multi-agent workflows with a typed DSL, a CLI-first runtime, and repo-local run state."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Amir Elaguizy" },
]
requires-python = ">=3.14"
keywords = [
    "agents",
    "ai",
    "multi-agent",
    "workflow",
    "orchestration",
    "cli",
    "llm",
    "doctrine",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "doctrine-agents>=1.0.2,<2",
    "PyYAML>=6.0.3,<7",
    "rich>=15.0.0,<16",
]

[project.urls]
Homepage = "https://github.com/aelaguiz/rally"
Documentation = "https://github.com/aelaguiz/rally/tree/main/docs"
Changelog = "https://github.com/aelaguiz/rally/blob/main/CHANGELOG.md"
Repository = "https://github.com/aelaguiz/rally"
Issues = "https://github.com/aelaguiz/rally/issues"
Discussions = "https://github.com/aelaguiz/rally/discussions"
Security = "https://github.com/aelaguiz/rally/security/policy"

[project.scripts]
rally = "rally.cli:main"

[tool.uv.sources]
doctrine-agents = { path = "../doctrine", editable = true }

[tool.rally.workspace]
version = 1

[tool.rally.package]
import_name = "rally"
pypi_environment = "pypi"
testpypi_environment = "testpypi"

[tool.doctrine.compile]
additional_prompt_roots = ["stdlib/rally/prompts"]

[tool.doctrine.emit]

[[tool.doctrine.emit.targets]]
name = "_stdlib_smoke"
entrypoint = "flows/_stdlib_smoke/prompts/AGENTS.prompt"
output_dir = "flows/_stdlib_smoke/build/agents"

[[tool.doctrine.emit.targets]]
name = "poem_loop"
entrypoint = "flows/poem_loop/prompts/AGENTS.prompt"
output_dir = "flows/poem_loop/build/agents"

[[tool.doctrine.emit.targets]]
name = "software_engineering_demo"
entrypoint = "flows/software_engineering_demo/prompts/AGENTS.prompt"
output_dir = "flows/software_engineering_demo/build/agents"

[[tool.doctrine.emit.targets]]
name = "rally-kernel"
entrypoint = "skills/rally-kernel/prompts/SKILL.prompt"
output_dir = "skills/rally-kernel/build"

[[tool.doctrine.emit.targets]]
name = "rally-memory"
entrypoint = "skills/rally-memory/prompts/SKILL.prompt"
output_dir = "skills/rally-memory/build"

[[tool.doctrine.emit.targets]]
name = "demo-git"
entrypoint = "skills/demo-git/prompts/SKILL.prompt"
output_dir = "skills/demo-git/build"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"rally_assets/stdlib/rally/prompts/rally" = ["stdlib/rally/prompts/rally/*.prompt"]
"rally_assets/skills/rally-kernel" = ["skills/rally-kernel/build/SKILL.md"]
"rally_assets/skills/rally-kernel/references" = ["skills/rally-kernel/build/references/*"]
"rally_assets/skills/rally-memory" = ["skills/rally-memory/build/SKILL.md"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
